<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tv_result"
        android:layout_marginVertical="@dimen/margin_space"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="@dimen/small_margin_space"
        android:layout_marginHorizontal="@dimen/margin_space"
        android:hint="@string/operand"
        android:inputType="number"
        android:textSize="@dimen/other_text_size"
        android:background="@drawable/draw_border"
        android:paddingVertical="@dimen/small_margin_space"
        android:paddingStart="@dimen/little_margin_space"
        android:id="@+id/et_operand"
        android:textColor="@color/colorBlack"
        android:paddingEnd="@dimen/little_margin_space" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_operand"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/small_margin_space"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_undo"
            android:text="@string/undo"
            android:layout_weight="2"
            android:textSize="@dimen/other_text_size"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add"
            android:text="@string/add"

            android:textSize="@dimen/other_text_size"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sub"
            android:text="@string/sub"
            android:textSize="@dimen/other_text_size"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_mul"
            android:text="@string/mul"
            android:textSize="@dimen/other_text_size"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_div"
            android:text="@string/div"
            android:textSize="@dimen/other_text_size"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_equal"
            android:text="@string/equal"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:textSize="@dimen/other_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_redo"
            android:text="@string/redo"
            android:textColor="@color/colorPrimary"
            android:layout_weight="2"
            android:textSize="@dimen/other_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <GridView
        android:padding="@dimen/little_margin_space"
        app:layout_constraintTop_toBottomOf="@id/ll_actions"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:id="@+id/gv_operations"
        android:numColumns="4"/>

</androidx.constraintlayout.widget.ConstraintLayout>